--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,18 @@ numpy
 opencv-python
 fastdeploy-python
 
-# only for show
+# GUI frameworks
 pyqt5
 gradio
+
+# Web-based real-time video streaming
+streamlit>=1.28.0
+streamlit-webrtc>=0.47.0
+av>=10.0.0
+aiortc>=1.4.0
+pandas
+
+# Flask-based real-time video streaming
+flask>=2.3.0
+flask-socketio>=5.3.0
+python-socketio>=5.8.0
