Add YOLO11 Pose Estimator implementation and remove camera test script
- Introduced `rdkx5_yolo11_pose_estimator.py` for loading and inference of the YOLO11 Pose model.
- Implemented preprocessing, forward pass, and post-processing methods for pose estimation.
- Added utility functions for converting image formats and drawing results.
- Removed `test_camera.py` as it is no longer needed.

--- a/Source/flask_config.yml
+++ b/Source/flask_config.yml
@@ -2,6 +2,15 @@
 # 姿态检测后端配置
 pose_backend: "rdkx5"  # 可选: "ov", "fastdeploy", "rdkx5"
 
+# 摄像头配置
+camera:
+  type: "rdkx5_imx219"  # 可选: "rdkx5_imx219", "usb"
+  width: 640
+  height: 480
+  sensor_width: 1920
+  sensor_height: 1080
+  device_id: 0  # USB摄像头设备ID
+
 # 模型路径配置
 models:
   ov:
