feat: update requirements and add new components for dashboard and sidebar
- Updated `requirements.txt` and `requirements_rdkx5.txt` to include `uvicorn`, `python-socketio`, and `fastapi`.
- Added `Sidebar` component for navigation with status display.
- Created `Dashboard` component for real-time monitoring and configuration settings.
- Implemented `Home` component as the landing page with project overview and features.
- Developed `KeyDebug` component for testing HID commands with configuration options.
- Introduced `MouseControl` component for gesture-based mouse simulation.
- Added `PoseRecorder` component for recording and exporting pose data.

--- a/Source/flask_config.yml
+++ b/Source/flask_config.yml
@@ -27,6 +27,7 @@ models:
 
 # 其他配置
 use_async: false  # 默认使用串行模式，提升稳定性
+detection_enabled: false
 confidence_threshold: 0.3
 send_commands_enabled: false
 fps_limit: 30
