feat: Add new pose configurations and enhance configuration management
- Introduced new pose configurations in JSON format, including various poses like RightV, LeftV, RightHandOnHip, and more.
- Updated `flask_config.yml` to include camera view angle and target angle for distortion correction.
- Modified routes in `routes.py` to dynamically load the latest configuration file and implement backup functionality upon saving or deleting poses.
- Enhanced `PoseDetectionService` to apply field of view (FOV) scaling based on camera settings for improved pose accuracy.
- Updated utility functions to retrieve the latest configuration file based on naming conventions.
- Adjusted pose estimation logic to account for camera distortion and improve detection reliability.

--- a/Source/flask_config.yml
+++ b/Source/flask_config.yml
@@ -10,6 +10,8 @@ camera:
   sensor_width: 1920
   sensor_height: 1080
   device_id: 0  # USB摄像头设备ID
+  view_angle: 120 # 相机广角角度
+  target_angle: 72 # 目标参考角度 (用于纠正形变)
 
 # 模型路径配置
 models:
@@ -20,7 +22,7 @@ models:
     model_path: "Source/Models/tinypose_128x96"
     device: "CPU"
   rdkx5:
-    model_path: "Source/Models/yolo11s_pose_bayese_640x640_nv12.bin"
+    model_path: "Source/Models/yolo11m_pose_bayese_640x640_nv12.bin"
     score_thres: 0.25
     nms_thres: 0.7
     kpt_conf_thres: 0.5
