feat: add camera type configuration and latest keypoints API
- Introduced camera type configuration in the Flask backend and updated the PoseDetectionService to handle different camera types (72camera and 120width_camera).
- Added a new API endpoint to fetch the latest raw keypoints for re-recording purposes.
- Updated the frontend to allow users to select the camera type and display the current camera type in the PoseConfig component.
- Removed the MouseControl page as it was deemed unnecessary.
- Enhanced the PoseConfig component to support re-recording of poses and display raw keypoint data.
- Implemented countdown logic for capturing poses with visual feedback in the UI.

--- a/Source/configs_20260114001348.json
+++ b/Source/configs_20260114001348.json
@@ -1,7 +1,7 @@
 [
     {
         "basekeypoints": "right_shoulder",
-        "camera_type": "120width_camera",
+        "camera_type": "72camera",
         "index": 1,
         "inner_flag": false,
         "keys": [],
@@ -11,180 +11,110 @@
         ],
         "name": "RightV",
         "pose_img": "Source/Images/RightV_1.jpg",
-        "raw_value_dict": {
-            "left_ankle": [
-                292.684326171875,
-                452.5048828125
-            ],
-            "left_ear": [
-                310.9153823852539,
-                106.60435485839844
-            ],
-            "left_elbow": [
-                367.4737777709961,
-                289.46685791015625
-            ],
-            "left_eye": [
-                293.0256805419922,
-                87.82719421386719
-            ],
-            "left_hip": [
-                322.7349395751953,
-                403.15809631347656
-            ],
-            "left_knee": [
-                311.3125991821289,
-                486.76202392578125
-            ],
-            "left_shoulder": [
-                339.1048126220703,
-                188.12335205078125
-            ],
-            "left_wrist": [
-                367.6900634765625,
-                384.4016418457031
-            ],
-            "nose": [
-                284.43950843811035,
-                98.14265441894531
-            ],
-            "right_ankle": [
-                239.4079761505127,
-                446.5535888671875
-            ],
-            "right_ear": [
-                256.52672362327576,
-                111.16221618652344
-            ],
-            "right_elbow": [
-                184.9402084350586,
-                255.63930702209473
-            ],
-            "right_eye": [
-                272.143030166626,
-                90.04107666015625
-            ],
-            "right_hip": [
-                255.7787345647812,
-                403.1197204589844
-            ],
-            "right_knee": [
-                247.71100425720215,
-                482.2588195800781
-            ],
-            "right_shoulder": [
-                238.1882553100586,
-                196.51915740966797
-            ],
-            "right_wrist": [
-                156.5985336303711,
-                154.83827209472656
-            ]
-        },
         "similarity_threshold": 0.95,
         "value_dict": {
             "right_elbow": [
-                -53.248046875,
-                59.12014961242676
+                -49.37408447265625,
+                49.55475044250488
             ],
             "right_wrist": [
-                -81.5897216796875,
-                -41.680885314941406
+                -84.44097900390625,
+                -42.79692077636719
+            ]
+        },
+        "raw_value_dict": {
+            "left_ankle": [
+                299.4910697937012,
+                458.50982666015625
+            ],
+            "left_ear": [
+                315.7908401489258,
+                108.65982055664062
+            ],
+            "left_elbow": [
+                366.3522644042969,
+                287.06712436676025
+            ],
+            "left_eye": [
+                297.1066017150879,
+                89.71223449707031
+            ],
+            "left_hip": [
+                320.8795700073242,
+                399.65260314941406
+            ],
+            "left_knee": [
+                321.5920867919922,
+                494.5443420410156
+            ],
+            "left_shoulder": [
+                344.96949768066406,
+                191.17278289794922
+            ],
+            "left_wrist": [
+                362.6398239135742,
+                391.92991638183594
+            ],
+            "nose": [
+                287.07510566711426,
+                100.99482727050781
+            ],
+            "right_ankle": [
+                251.37319564819336,
+                452.1620178222656
+            ],
+            "right_ear": [
+                259.7668716907501,
+                112.25257873535156
+            ],
+            "right_elbow": [
+                188.21214294433594,
+                246.06262397766113
+            ],
+            "right_eye": [
+                275.01290130615234,
+                91.72380065917969
+            ],
+            "right_hip": [
+                249.56749725341797,
+                398.9973678588867
+            ],
+            "right_knee": [
+                249.3794813156128,
+                490.0400695800781
+            ],
+            "right_shoulder": [
+                237.5862274169922,
+                196.50787353515625
+            ],
+            "right_wrist": [
+                153.14524841308594,
+                153.71095275878906
             ]
         }
     },
     {
-        "basekeypoints": "left_shoulder",
+        "name": "LeftV",
         "index": 2,
         "inner_flag": false,
+        "similarity_threshold": 0.95,
         "keys": [],
+        "basekeypoints": "left_shoulder",
         "list_corekeypoints": [
             "left_elbow",
             "left_wrist"
         ],
-        "name": "LeftV",
-        "pose_img": "Source/Images/LeftV_2.jpg",
-        "similarity_threshold": 0.95,
         "value_dict": {
             "left_elbow": [
-                53.7993278503418,
-                65.01970100402832
+                -76.67457580566406,
+                81.17578125
             ],
             "left_wrist": [
-                83.26735305786133,
-                -28.03240966796875
+                -157.1609649658203,
+                -39.96327209472656
             ]
         },
-        "raw_value_dict": {
-            "left_ankle": [
-                301.48626041412354,
-                453.68284606933594
-            ],
-            "left_ear": [
-                276.38754653930664,
-                103.71598815917969
-            ],
-            "left_elbow": [
-                359.58995056152344,
-                249.2932071685791
-            ],
-            "left_eye": [
-                256.87265396118164,
-                81.9921875
-            ],
-            "left_hip": [
-                288.0146092250943,
-                400.6278076171875
-            ],
-            "left_knee": [
-                286.7754304409027,
-                487.31822204589844
-            ],
-            "left_shoulder": [
-                305.79062271118164,
-                184.27350616455078
-            ],
-            "left_wrist": [
-                389.05797576904297,
-                156.24109649658203
-            ],
-            "nose": [
-                246.43593215942383,
-                92.67999267578125
-            ],
-            "right_ankle": [
-                215.0709457397461,
-                461.9517059326172
-            ],
-            "right_ear": [
-                223.85144805908203,
-                103.07301330566406
-            ],
-            "right_elbow": [
-                172.74806213378906,
-                296.07603454589844
-            ],
-            "right_eye": [
-                235.8789405822754,
-                82.70301818847656
-            ],
-            "right_hip": [
-                213.6864242553711,
-                399.3368225097656
-            ],
-            "right_knee": [
-                210.9430389404297,
-                490.8953552246094
-            ],
-            "right_shoulder": [
-                199.6263427734375,
-                186.22838592529297
-            ],
-            "right_wrist": [
-                169.0741958618164,
-                392.52593994140625
-            ]
-        }
+        "pose_img": "Source/Images/LeftV_2.jpg"
     },
     {
         "name": "RightHandOnHip",
