--- a/Source/configs_20260114001439.json
+++ b/Source/configs_20260114001439.json
@@ -94,97 +94,27 @@
         }
     },
     {
-        "basekeypoints": "left_shoulder",
+        "name": "LeftV",
         "index": 2,
         "inner_flag": false,
+        "similarity_threshold": 0.95,
         "keys": [],
+        "basekeypoints": "left_shoulder",
         "list_corekeypoints": [
             "left_elbow",
             "left_wrist"
         ],
-        "name": "LeftV",
-        "pose_img": "Source/Images/LeftV_2.jpg",
-        "similarity_threshold": 0.95,
         "value_dict": {
             "left_elbow": [
-                53.7993278503418,
-                65.01970100402832
+                -76.67457580566406,
+                81.17578125
             ],
             "left_wrist": [
-                83.26735305786133,
-                -28.03240966796875
+                -157.1609649658203,
+                -39.96327209472656
             ]
         },
-        "raw_value_dict": {
-            "left_ankle": [
-                301.48626041412354,
-                453.68284606933594
-            ],
-            "left_ear": [
-                276.38754653930664,
-                103.71598815917969
-            ],
-            "left_elbow": [
-                359.58995056152344,
-                249.2932071685791
-            ],
-            "left_eye": [
-                256.87265396118164,
-                81.9921875
-            ],
-            "left_hip": [
-                288.0146092250943,
-                400.6278076171875
-            ],
-            "left_knee": [
-                286.7754304409027,
-                487.31822204589844
-            ],
-            "left_shoulder": [
-                305.79062271118164,
-                184.27350616455078
-            ],
-            "left_wrist": [
-                389.05797576904297,
-                156.24109649658203
-            ],
-            "nose": [
-                246.43593215942383,
-                92.67999267578125
-            ],
-            "right_ankle": [
-                215.0709457397461,
-                461.9517059326172
-            ],
-            "right_ear": [
-                223.85144805908203,
-                103.07301330566406
-            ],
-            "right_elbow": [
-                172.74806213378906,
-                296.07603454589844
-            ],
-            "right_eye": [
-                235.8789405822754,
-                82.70301818847656
-            ],
-            "right_hip": [
-                213.6864242553711,
-                399.3368225097656
-            ],
-            "right_knee": [
-                210.9430389404297,
-                490.8953552246094
-            ],
-            "right_shoulder": [
-                199.6263427734375,
-                186.22838592529297
-            ],
-            "right_wrist": [
-                169.0741958618164,
-                392.52593994140625
-            ]
-        }
+        "pose_img": "Source/Images/LeftV_2.jpg"
     },
     {
         "name": "RightHandOnHip",
