feat: add automation script for HID control via TCP
- Implemented a new script `hid_automation_test.py` to automate keyboard and mouse actions.
- Configured target device IP and port for TCP communication.
- Added functions to send raw commands directly to the controller, bypassing existing caching mechanisms.
- Included steps to press and release the 'a' key, and to move the mouse left and right for specified durations.
- Ensured proper cleanup of key states on user interruption.

--- a/Source/configs_backup.json
+++ b/Source/configs_backup.json
@@ -21,7 +21,8 @@
                 73.0457763671875,
                 -131.6073226928711
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "LeftHandOnHip",
@@ -40,7 +41,8 @@
                 -4.2689208984375,
                 159.2177734375
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "LeftHandOnShoulder",
@@ -64,7 +66,8 @@
                 172.7346954345703,
                 -5.5809173583984375
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "LeftHandOut",
@@ -83,7 +86,8 @@
                 -132.79608154296875,
                 54.8519287109375
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "LeftHandUp",
@@ -102,7 +106,8 @@
                 -66.80403137207031,
                 -224.44114685058594
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "LeftV",
@@ -121,7 +126,8 @@
                 -157.1609649658203,
                 -39.96327209472656
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "RightHandOnHead",
@@ -145,7 +151,8 @@
                 -87.55984497070312,
                 -114.21543884277344
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "RightHandOnHip",
@@ -164,7 +171,8 @@
                 31.795166015625,
                 177.29721069335938
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "RightHandOnShoulder",
@@ -188,7 +196,8 @@
                 -167.52532958984375,
                 24.355514526367188
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "RightHandOut",
@@ -207,7 +216,8 @@
                 161.825439453125,
                 71.52139282226562
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "RightHandUp",
@@ -226,7 +236,8 @@
                 66.98867797851562,
                 -219.03517150878906
             ]
-        }
+        },
+        "enable": true
     },
     {
         "name": "RightV",
@@ -245,6 +256,7 @@
                 177.73501586914062,
                 -42.712554931640625
             ]
-        }
+        },
+        "enable": true
     }
 ]
